aanpassingen voor efficiency